[package]
name = "dotenv_plus"
version = "0.5.1"
authors = ["Alpheus <contact@alphe.us>"]
edition = "2024"
rust-version = "1.85.0"
description = """
A dotenv solution for Rust
"""
readme = "README.md"
homepage = "https://github.com/alpheusday/dotenv_plus.rs"
repository = "https://github.com/alpheusday/dotenv_plus.rs"
license = "MIT"
keywords = [
    "dotenv_plus",
    "dotenv",
    "env",
    "solution",
    "util",
]
categories = [
    "config",
    "filesystem"
]
include = [
    "src/*", 
    "Cargo.toml",
    "README.md",
]

[dependencies]
dotenvy = "~0.15.7"
